--- a/QUETZUAL (administrador)/rankingAdmin.html
+++ b/QUETZUAL (administrador)/rankingAdmin.html
@@ -89,7 +89,7 @@
             <button class="cs">Cerrar sesión</button>
         </aside>
     </div>
-    <script src="./JS/funcionModal.js"></script>
+    <script src="./JS/funcionModal2.js"></script>
 </body>
 
 </html>
