Agregar conexiones de usuario

--- a/confirmacionUsuario.html
+++ b/confirmacionUsuario.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
+    <img src="./img/gatitoConfirmacion.jpg">
     <div class="modal">
         <p>
             Tu pregunta se ha realizado con exito
         </p><br>
         <a href="./hacerPregunta.html"><button>Aceptar</button></a>
     </div>
-    <img src="./img/gatitoConfirmacion.jpg" alt="">
 </body>
 
 </html>
