--- a/cuenta.html
+++ b/cuenta.html
@@ -19,12 +19,12 @@
             <button class="cs">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <div class="menu_content">
+            <a href="./sesionUsuario.html">
                 <img src="./img/bx-home.svg" alt="Imagen "> Inicio
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./preguntasPendientes.html">
                 <img src="./img/bx-question-mark.svg" alt="Signo de pregunta" class="svg"> Mis preguntas
-            </div>
+            </a>
         </div>
     </header>
 
