--- a/sesionUsuario.html
+++ b/sesionUsuario.html
@@ -21,18 +21,18 @@
             <button class="cs">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <div class="menu_content">
+            <a href="./index.html">
                 <img src="./img/bxs-bar-chart-alt-2.svg" alt="Imagen "> Inducción
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./cuenta.html">
                 <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./preguntasRespondidas.html">
                 <img src="./img/bx-question-mark.svg" alt="Imagen "> Mis preguntas
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./hacerPregunta.html">
                 <img src="./img/bx-edit-alt.svg" alt="Signo de editar" class="svg"> Quiero preguntar
-            </div>
+            </a>
         </div>
     </header>
 
@@ -102,7 +102,7 @@
             <h2>Dr. Juan Manuel Mendoza</h2>
         </div>
         <div class="pregunta">
-            <img src="./img/bxs-user.svg" alt="">
+            <img src="./img/bxs-user.svg">
             <div class="preguntas">
                 <h3>Tuve relaciones con mi pareja, y deacuerdo a mis sintomas creo que tengo S.I.D.A. pero temo ir al medico. Podría por favor ayudarme a saber si podría padecer S.I.D.A. y cual sería un posible tratamiento por favor? Estos son mis sintomas:
                     1.- Dolor al tragar 2.- Diarrea 3.- Llagas en la ingle</h3>
