--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/estilos.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
                 <form action="">
                     <input type="text" class="texto" placeholder="Correo">
                     <input type="password" class="texto" placeholder="Contraseña">
-                    <input type="submit" class="submit button" value="Iniciar sesión">
+                    <button type="button" class="submit button" onclick="distribucion()">Iniciar sesión</button>
                 </form>
                 <hr width="90%">
                 <button class="Registro" id="registrar" data-open="modalR">
@@ -36,11 +37,11 @@
         <div class="modal" id="modalR">
             <div class="card">
                 <form action="./index.html">
-                    <input type="text" placeholder="Nombre de Usuario" class="input">
-                    <input type="text" placeholder="Correo electronico" class="input">
+                    <input type="text" id="nom_usu" placeholder="Nombre de Usuario" class="input">
+                    <input type="text" id="correo" placeholder="Correo electronico" class="input">
                     <br>
                     <label for="" class="article">Fecha de nacimiento</label><br>
-                    <input type="date" name="" id="" class="input">
+                    <input type="date" name="" id="fecha" class="input">
                     <br>
                     <label for="" class="article">Sexo</label>
                     <br>
@@ -53,15 +54,17 @@
                     <input type="password" name="" id="" placeholder="Confirmar Contraseña" class="input">
                     <article class="article">Al hacer clic en “Registrarte”, aceptas nuestras
                         <a href="#" class="a">condiciones</a>, la <a href="#" class="a">politica de datos</a> y la <a href="#" class="a">politica de cookies</a></article>
-                    <input type="submit" class="submit" value="Registrarse">
+                    <button type="button" class="submit" onclick="aceptar()" id="enviar">Registrarse </button>
                 </form>
             </div>
         </div>
     </div>
-    <footer class="footer">
+    <footer class="footer ">
         Tecnologia administrativa creativa y operadora de software
     </footer>
-    <script src="./JS/funcionModal.js"></script>
+    <script src="./JS/validar.js"></script>
+    <script src="./JS/sweetAlert.js "></script>
+    <script src="./JS/funcionModal.js "></script>
 </body>
 
 </html>
