--- a/modificarPregunta.html
+++ b/modificarPregunta.html
@@ -17,16 +17,16 @@
             <article>Mis preguntas</article>
             <button class="cs ">Cerrar sesión</button>
         </nav>
-        <div class="menu ">
-            <div class="menu_content ">
-                <img src="./img/bx-home.svg" alt="Simbolo de usuario " class="svg "> Inicio
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-user-circle.svg" width="40 " alt="Simbolo de usuario " class="svg "> Mi cuenta
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-edit-alt.svg" alt="Simbolo de pregunta"> Quiero Preguntar
-            </div>
+        <div class="menu">
+            <a href="./sesionUsuario.html">
+                <img src="./img/bx-home.svg" alt="Imagen inicio"> Inicio
+            </a>
+            <a href="./cuenta.html">
+                <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
+            </a>
+            <a href="./hacerPregunta.html">
+                <img src="./img/bx-edit-alt.svg" alt="Signo de editar" class="svg"> Quiero preguntar
+            </a>
         </div>
     </header>
     <div class="title">
@@ -45,8 +45,7 @@
         </div>
         <div class="pregunta">
             <img src="./img/bxs-user.svg" alt="">
-            <textarea name="" id="" class="area" placeholder="Escribe aquí tu pregunta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi, minima deserunt sit sequi aspernatur.
-            </textarea>
+            <textarea name="" id="" class="area" placeholder="Escribe aquí tu pregunta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium modi, minima deserunt sit sequi aspernatur.</textarea>
         </div>
         <div class="flex">
             <button class="cs" data-open="modalR">Eliminar pregunta</button>
