--- a/preguntasPendientes.html
+++ b/preguntasPendientes.html
@@ -18,15 +18,15 @@
             <button class="cs">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <div class="menu_content">
+            <a href="./sesionUsuario.html">
                 <img src="./img/bx-home.svg" alt="Imagen inicio"> Inicio
-            </div>
-            <div class="menu_content">
-                <img src="./img/bx-user-circle.svg" width="40" alt="Simbolo de usuario" class="svg"> Mi cuenta
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./cuenta.html">
+                <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
+            </a>
+            <a href="./hacerPregunta.html">
                 <img src="./img/bx-edit-alt.svg" alt="Signo de editar" class="svg"> Quiero preguntar
-            </div>
+            </a>
         </div>
     </header>
     <div class="title">
@@ -35,12 +35,12 @@
         <p>En este espacio puedes consultar tus preguntas que están en espera de recibir respuesta</p>
     </div>
     <div class="filtro">
-        <select name="filtro" id="filtro">
+        <select name="filtro" id="filtro" onchange="javascript:location.href = this.value;">
             <option selected disabled hidden>Selecciona el filtro de preguntas</option>
-            <option value="a">Hacer pregunta</option>
-            <option value="a">Preguntas Respondidas</option>
-            <option value="a">Preguntas rechazadas</option>
-            <option value="a">Preguntas pendientes</option>
+            <option value="./hacerPregunta.html">Hacer pregunta</option>
+            <option value="./preguntasRespondidas.html">Preguntas Respondidas</option>
+            <option value="./preguntasRechazadas.html">Preguntas rechazadas</option>
+            <option value="./preguntasPendientes.html">Preguntas pendientes</option>
         </select>
     </div>
     <div class="main_container">
@@ -62,7 +62,7 @@
             </div>
             <div class="pregunta">
                 <button class="cs">Eliminar pregunta</button>
-                <button class="question" data-open="modalR">Modificar Pregunta</button>
+                <button class="question" data-open="modalR" onclick="enviarModificarPregunta()">Modificar Pregunta</button>
             </div>
         </div>
         <div class="pregunta2">
@@ -74,6 +74,7 @@
             <img src="./img/bx-plus-medical.svg" alt="">
         </div>
     </div>
+    <script src="./JS/sweetAlert.js"></script>
 </body>
 
 </html>
