--- a/preguntasRechazadas.html
+++ b/preguntasRechazadas.html
@@ -17,16 +17,16 @@
             <article>Mis preguntas</article>
             <button class="cs ">Cerrar sesión</button>
         </nav>
-        <div class="menu ">
-            <div class="menu_content ">
-                <img src="./img/bx-home.svg" alt="Simbolo de usuario " class="svg "> Inicio
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-user-circle.svg" width="40 " alt="Simbolo de usuario " class="svg "> Mi cuenta
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-edit-alt.svg" alt="Simbolo de pregunta"> Quiero Preguntar
-            </div>
+        <div class="menu">
+            <a href="./sesionUsuario.html">
+                <img src="./img/bx-home.svg" alt="Imagen inicio"> Inicio
+            </a>
+            <a href="./cuenta.html">
+                <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
+            </a>
+            <a href="./hacerPregunta.html">
+                <img src="./img/bx-edit-alt.svg" alt="Signo de editar" class="svg"> Quiero preguntar
+            </a>
         </div>
     </header>
     <div class="title">
@@ -35,12 +35,12 @@
         <p>En este espacio puedes consultar las preguntas que han sido rechazadas por los doctores.</p>
     </div>
     <div class="filtro">
-        <select name="filtro" id="filtro">
+        <select name="filtro" id="filtro" onchange="javascript:location.href = this.value;">
             <option selected disabled hidden>Selecciona el filtro de preguntas</option>
-            <option value="a">Hacer pregunta</option>
-            <option value="a">Preguntas Respondidas</option>
-            <option value="a">Preguntas rechazadas</option>
-            <option value="a">Preguntas pendientes</option>
+            <option value="./hacerPregunta.html">Hacer pregunta</option>
+            <option value="./preguntasRespondidas.html">Preguntas Respondidas</option>
+            <option value="./preguntasRechazadas.html">Preguntas rechazadas</option>
+            <option value="./preguntasPendientes.html">Preguntas pendientes</option>
         </select>
     </div>
     <div class="card">
