--- a/paginaError2.html
+++ b/paginaError2.html
@@ -13,6 +13,7 @@
 <body class="miau">
     <div class="alinear">
         <h1>Algo salío mal, estamos trabajando en ello</h1>
+        <a href="./sesionUsuario.html"><button>volver</button></a>
     </div>
 </body>
 
