--- a/sesionUsuario.html
+++ b/sesionUsuario.html
@@ -21,7 +21,7 @@
             <button class="cs">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <a href="./index.html">
+            <a href="./paginaError2.html">
                 <img src="./img/bxs-bar-chart-alt-2.svg" alt="Imagen "> Inducción
             </a>
             <a href="./cuenta.html">
