Agregar las conexiones de usuario. doctor y cambiar los alert por swal

--- a/QUETZUAL(doctor)/cuentaDoctor.html
+++ b/QUETZUAL(doctor)/cuentaDoctor.html
@@ -15,18 +15,18 @@
         <nav class="navegacion">
             <img src="./img/logotipo.png" alt="Logotipo oficial de Quetzual" class="logo">
             <article>Mi cuenta</article>
-            <button class="cs">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <div class="menu_content">
+            <a href="./inicioDoctor.html">
                 <img src="./img/bx-home.svg" alt="Imagen inicio"> Inicio
-            </div>
-            <div class="menu_content">
-                <img src="./img/bx-edit.svg" width="40" alt="Simbolo de usuario" class="svg"> Gestionar preguntas
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./preguntasPendientes.html">
+                <img src="./img/bx-edit.svg" alt="Imagen "> Gestionar preguntas
+            </a>
+            <a href="./ranking.html">
                 <img src="./img/bx-line-chart.svg" alt="Signo de editar" class="svg"> Ranking
-            </div>
+            </a>
         </div>
     </header>
 
@@ -170,6 +170,7 @@
             </div>
         </div>
     </div>
+    <script src="./JS/redirigir.js"></script>
 </body>
 
 </html>
