--- a/QUETZUAL(doctor)/paginaError1.html
+++ b/QUETZUAL(doctor)/paginaError1.html
@@ -13,7 +13,7 @@
 <body>
     <div class="alinear">
         <h1>Algo salío mal, estamos trabajando en ello</h1>
-        <a href="./QUETZUAL(doctor)/inicioDoctor.html"><button>volver</button></a>
+        <a href="./inicioDoctor.html"><button>volver</button></a>
     </div>
 </body>
 
