--- a/hacerPregunta.html
+++ b/hacerPregunta.html
@@ -15,7 +15,7 @@
         <nav class="navegacion ">
             <img src="./img/logotipo.png " alt="Logotipo oficial de Quetzual " class="logo ">
             <article>Mis preguntas</article>
-            <button class="cs ">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
             <a href="./sesionUsuario.html">
@@ -85,6 +85,7 @@
             <button class="question" onclick="enviarConfirmacion()">Continuar</button>
         </div>
     </div>
+    <script src="./JS/validar.js"></script>
     <script src="./JS/sweetAlert.js"></script>
     <script src="./JS/funcionModal.js"></script>
 </body>
