--- a/QUETZUAL(doctor)/inicioDoctor.html
+++ b/QUETZUAL(doctor)/inicioDoctor.html
@@ -16,21 +16,21 @@
         <nav class="navegacion">
             <img src="../img/logotipo.png" alt="Logotipo oficial de Quetzual" class="logo">
             <article>Estadisticas</article>
-            <button class="cs">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <div class="menu_content">
+            <a href="./paginaError1.html">
                 <img src="./img/bxs-bar-chart-alt-2.svg" alt="Imagen "> Inducción
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./cuentaDoctor.html">
                 <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./preguntasPendientes.html">
                 <img src="./img/bx-edit.svg" alt="Imagen "> Gestionar preguntas
-            </div>
-            <div class="menu_content">
+            </a>
+            <a href="./ranking.html">
                 <img src="./img/bx-line-chart.svg" alt="Signo de editar" class="svg"> Ranking
-            </div>
+            </a>
         </div>
     </header>
     <div>
@@ -40,6 +40,7 @@
     <div class="bar">
         <canvas id="docChart"></canvas>
     </div>
+    <script src="./JS/redirigir.js"></script>
     <script type="text/javascript" src="./JS/graficas.js"></script>
 </body>
 
