--- a/QUETZUAL(doctor)/preguntasPendientes.html
+++ b/QUETZUAL(doctor)/preguntasPendientes.html
@@ -15,18 +15,18 @@
         <nav class="navegacion ">
             <img src="./img/logotipo.png " alt="Logotipo oficial de Quetzual " class="logo ">
             <article>Gestionar preguntas</article>
-            <button class="cs ">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
-        <div class="menu ">
-            <div class="menu_content ">
+        <div class="menu">
+            <a href="./inicioDoctor.html">
                 <img src="./img/bx-home.svg" alt="Simbolo de usuario " class="svg "> Inicio
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-user-circle.svg" width="40 " alt="Simbolo de usuario " class="svg "> Mi cuenta
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-line-chart.svg" alt="Simbolo de pregunta"> Ranking
-            </div>
+            </a>
+            <a href="./cuentaDoctor.html">
+                <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
+            </a>
+            <a href="./ranking.html">
+                <img src="./img/bx-line-chart.svg" alt="Signo de editar" class="svg"> Ranking
+            </a>
         </div>
     </header>
     <div class="title">
@@ -42,23 +42,11 @@
             <textarea name="" id="" class="area" placeholder="Escribe aquí tu pregunta" disabled>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente beatae laboriosam id ducimus vitae aperiam odio accusamus? Molestiae, dignissimos voluptates?</textarea>
         </div>
         <div class="flex">
-            <button class="question" data-open="modalR">Responder pregunta</button>
-            <button class="cs">Rechazar pregunta</button>
+            <button class="question" onclick="enviarResponderPregunta()">Responder pregunta</button>
+            <button class="cs" onclick="enviarRechazarPregunta()">Rechazar pregunta</button>
         </div>
     </div>
-    <div class="main_container">
-        <div class="mini_header2">
-            <h2>11/10/2021</h2>
-        </div>
-        <div class="pregunta">
-            <img src="./img/bxs-user.svg" alt="">
-            <textarea name="" id="" class="area" placeholder="Escribe aquí tu pregunta" disabled>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente beatae laboriosam id ducimus vitae aperiam odio accusamus? Molestiae, dignissimos voluptates?</textarea>
-        </div>
-        <div class="flex">
-            <button class="question" data-open="modalR">Responder pregunta</button>
-            <button class="cs">Rechazar pregunta</button>
-        </div>
-    </div>
+    <script src="./JS/redirigir.js"></script>
 </body>
 
 </html>
