--- a/QUETZUAL(doctor)/ranking.html
+++ b/QUETZUAL(doctor)/ranking.html
@@ -15,21 +15,18 @@
         <nav class="navegacion">
             <img src="./img/logotipo.png" alt="Logotipo oficial de Quetzual" class="logo">
             <article>Ranking</article>
-            <button class="cs">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <div class="menu_content">
-                <img src="./img/bxs-bar-chart-alt-2.svg" alt="Imagen "> Inducción
-            </div>
-            <div class="menu_content">
+            <a href="./inicioDoctor.html">
+                <img src="./img/bx-home.svg" alt="Simbolo de usuario " class="svg "> Inicio
+            </a>
+            <a href="./cuentaDoctor.html">
                 <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
-            </div>
-            <div class="menu_content">
-                <img src="./img/bx-question-mark.svg" alt="Imagen "> Mis preguntas
-            </div>
-            <div class="menu_content">
-                <img src="./img/bx-edit-alt.svg" alt="Signo de editar" class="svg"> Quiero preguntar
-            </div>
+            </a>
+            <a href="./preguntasPendientes.html">
+                <img src="./img/bx-edit.svg" alt="Imagen "> Gestionar preguntas
+            </a>
         </div>
     </header>
 
@@ -107,7 +104,7 @@
         </div>
     </div>
     <div class="main_container">
-
+        <script src="./JS/redirigir.js"></script>
 </body>
 
 </html>
