--- a/QUETZUAL(doctor)/rechazarPregunta.html
+++ b/QUETZUAL(doctor)/rechazarPregunta.html
@@ -15,18 +15,18 @@
         <nav class="navegacion ">
             <img src="./img/logotipo.png " alt="Logotipo oficial de Quetzual " class="logo ">
             <article>Responder pregunta</article>
-            <button class="cs ">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
-        <div class="menu ">
-            <div class="menu_content ">
+        <div class="menu">
+            <a href="./inicioDoctor.html">
                 <img src="./img/bx-home.svg" alt="Simbolo de usuario " class="svg "> Inicio
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-user-circle.svg" width="40 " alt="Simbolo de usuario " class="svg "> Mi cuenta
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-line-chart.svg" alt="Simbolo de pregunta"> Ranking
-            </div>
+            </a>
+            <a href="./cuentaDoctor.html">
+                <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
+            </a>
+            <a href="./ranking.html">
+                <img src="./img/bx-line-chart.svg" alt="Signo de editar" class="svg"> Ranking
+            </a>
         </div>
     </header>
     <div class="title">
@@ -58,10 +58,11 @@
         <div class="card">
             <h1>Cuidado, esta acción será permanente, una vez que rechace la pregunta los datos no podrán recuperarse.</h1><br>
             <h1>¿Desea continuar?</h1><br>
-            <a href="./preguntasPendientes.html"><button class="cs">Rechazar pregunta</button></a><br>
+            <button class="cs" onclick="enviarGestionarPreguntas()">Rechazar pregunta</button><br>
             <button class="question">No, deseo mantener la pregunta</button>
         </div>
     </div>
+    <script src="./JS/redirigir.js"></script>
     <script src="./JS/funcionModal.js"></script>
 </body>
 
