--- a/QUETZUAL(doctor)/responderPregunta.html
+++ b/QUETZUAL(doctor)/responderPregunta.html
@@ -15,21 +15,21 @@
         <nav class="navegacion ">
             <img src="./img/logotipo.png " alt="Logotipo oficial de Quetzual " class="logo ">
             <article>Responder pregunta</article>
-            <button class="cs ">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
-        <div class="menu ">
-            <div class="menu_content ">
+        <div class="menu">
+            <a href="./inicioDoctor.html">
                 <img src="./img/bx-home.svg" alt="Simbolo de usuario " class="svg "> Inicio
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-user-circle.svg" width="40 " alt="Simbolo de usuario " class="svg "> Mi cuenta
-            </div>
-            <div class="menu_content ">
-                <img src="./img/bx-line-chart.svg" alt="Simbolo de pregunta"> Ranking
-            </div>
+            </a>
+            <a href="./cuentaDoctor.html">
+                <img src="./img/bx-user-circle.svg" width="40" alt="Signo de pregunta" class="svg"> Mi cuenta
+            </a>
+            <a href="./ranking.html">
+                <img src="./img/bx-line-chart.svg" alt="Signo de editar" class="svg"> Ranking
+            </a>
         </div>
     </header>
-    <div class="title">
+    <div class="title" onclick="enviarGestionarPreguntas()">
         <img src="./img/bxs-left-arrow-circle.svg">
         <h1>Volver a gestionar preguntas</h1>
     </div>
@@ -69,10 +69,11 @@
             <h1>Gracias por tu esfuerzo</h1><br>
             <img src="./img/undraw_happy_announcement_ac67.svg" class="img">
 
-            <a href="./preguntasPendientes.html"><button class="question">Aceptar</button></a>
+            <button class="question" onclick="enviarGestionarPreguntas()">Aceptar</button>
         </div>
     </div>
     <script src="./JS/funcionModal.js"></script>
+    <script src="./JS/redirigir.js"></script>
 </body>
 
 </html>
