--- a/cuenta.html
+++ b/cuenta.html
@@ -16,7 +16,7 @@
         <nav class="navegacion">
             <img src="./img/logotipo.png" alt="Logotipo oficial de Quetzual" class="logo">
             <article>Cuenta</article>
-            <button class="cs">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
             <a href="./sesionUsuario.html">
@@ -99,6 +99,8 @@
     <button class="cs" data-open="modalR"><b>Eliminar cuenta</b></button>
     <script type="text/javascript" src="./JS/graficas.js"></script>
     <script src="./JS/funcionModal.js"></script>
+    <script src="./JS/validar.js"></script>
+    <script src="./JS/sweetAlert.js"></script>
 </body>
 
 </html>
