--- a/preguntasRechazadas.html
+++ b/preguntasRechazadas.html
@@ -15,7 +15,7 @@
         <nav class="navegacion ">
             <img src="./img/logotipo.png " alt="Logotipo oficial de Quetzual " class="logo ">
             <article>Mis preguntas</article>
-            <button class="cs ">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
             <a href="./sesionUsuario.html">
@@ -58,6 +58,8 @@
             </div>
         </div>
     </div>
+    <script src="./JS/validar.js"></script>
+    <script src="./JS/sweetAlert.js"></script>
 </body>
 
 </html>
