--- a/sesionUsuario.html
+++ b/sesionUsuario.html
@@ -18,7 +18,7 @@
         <nav class="navegacion">
             <img src="./img/logotipo.png" alt="Logotipo oficial de Quetzual" class="logo">
             <article>Inicio</article>
-            <button class="cs">Cerrar sesión</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
             <a href="./paginaError2.html">
@@ -130,6 +130,8 @@
             <img src="./img/check-square-solid-240.png" alt="">
         </div>
     </div>
+    <script src="./JS/validar.js"></script>
+    <script src="./JS/sweetAlert.js"></script>
     <script src="./JS/funcionModal.js"></script>
 </body>
 
