--- a/QUETZUAL (administrador)/consultarHistorico.html
+++ b/QUETZUAL (administrador)/consultarHistorico.html
@@ -18,7 +18,7 @@
         <hr>
     </div>
     <div class="flex">
-        <button><img src="./img/bxs-left-arrow.svg" class="img">Volver</button>
+        <button onclick="enviarAdminDoctores()"><img src="./img/bxs-left-arrow.svg" class="img">Volver</button>
         <h2>Preguntas Respondidas</h2>
     </div>
     <div class="filtro">
@@ -106,12 +106,13 @@
     <div class="modal" id="modalR">
         <aside class="modal-dialog">
             <img src="./img/logotipo.png">
-            <button>Administrar doctores</button>
-            <button>Cuenta</button>
-            <button>Ranking</button>
-            <button class="cs">Cerrar sesión</button>
+            <button onclick="enviarSesionAdmin()">Inicio</button>
+            <button onclick="enviarCuentaAdmin()">Cuenta</button>
+            <button onclick="enviarRankingAdmin()">Ranking</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </aside>
     </div>
+    <script src="./JS/redirigir.js"></script>
     <script src="./JS/funcionModal.js"></script>
 </body>
 
