--- a/QUETZUAL (administrador)/rankingAdmin.html
+++ b/QUETZUAL (administrador)/rankingAdmin.html
@@ -83,12 +83,13 @@
     <div class="modal" id="modalR">
         <aside class="modal-dialog">
             <img src="./img/logotipo.png">
-            <button>Administrar doctores</button>
-            <button>Cuenta</button>
-            <button>Ranking</button>
-            <button class="cs">Cerrar sesión</button>
+            <button onclick="enviarSesionAdmin()">Inicio</button>
+            <button onclick="enviarCuentaAdmin()">Cuenta</button>
+            <button onclick="enviarAdminDoctores()">Administrar Doctores</button>
+            <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </aside>
     </div>
+    <script src="./JS/redirigir.js"></script>
     <script src="./JS/funcionModal2.js"></script>
 </body>
 
