--- a/QUETZUAL (administrador)/sesionAdmin.html
+++ b/QUETZUAL (administrador)/sesionAdmin.html
@@ -14,16 +14,17 @@
 <body>
     <aside>
         <img src="./img/logotipo.png">
-        <button>Administrar doctores</button>
-        <button>Cuenta</button>
-        <button>Ranking</button>
-        <button class="cs">Cerrar sesión</button>
+        <button onclick="enviarAdminDoctores()">Administrar doctores</button>
+        <button onclick="enviarCuentaAdmin()">Cuenta</button>
+        <button onclick="enviarRankingAdmin()">Ranking</button>
+        <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
     </aside>
     <h1>Bienvenido Administrador</h1>
     <div>Estos son los datos más recientes desde la última vez</div>
     <div class="bar">
         <canvas id="admChart"></canvas>
     </div>
+    <script src="./JS/redirigir.js"></script>
     <script type="text/javascript" src="./JS/graficas.js"></script>
 </body>
 
