Agregar validacion de registro e inicio de sesion

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="modal" id="modalR">
             <div class="card">
                 <form action="./index.html">
-                    <input type="text" id="nom_usu" placeholder="Nombre de Usuario" class="input">
+                    <input type="text" id="nombre" placeholder="Nombre de Usuario" class="input">
                     <input type="text" id="correo" placeholder="Correo electronico" class="input">
                     <br>
                     <label for="" class="article">Fecha de nacimiento</label><br>
@@ -45,13 +45,13 @@
                     <br>
                     <label for="" class="article">Sexo</label>
                     <br>
-                    <select name="" id="" class="select">
-                    <option value="a">Masculino</option>
-                    <option value="a">Femenino</option>
-                    <option value="a">Prefiero no decirlo</option>
-                </select>
-                    <input type="password" name="" id="" placeholder="Contraseña" class="input">
-                    <input type="password" name="" id="contrasena" placeholder="Confirmar Contraseña" class="input">
+                    <select name="" id="sexo" class="select">
+                        <option value="a">Masculino</option>
+                        <option value="a">Femenino</option>
+                        <option value="a">Prefiero no decirlo</option>
+                    </select>
+                    <input type="password" name="" id="password" placeholder="Contraseña" class="input">
+                    <input type="password" name="" id="confpass" placeholder="Confirmar Contraseña" class="input">
                     <article class="article">Al hacer clic en “Registrarte”, aceptas nuestras
                         <a href="#" class="a">condiciones</a>, la <a href="#" class="a">politica de datos</a> y la <a href="#" class="a">politica de cookies</a></article>
                     <button type="button" class="submit" onclick="aceptar()" id="enviar">Registrarse </button>
