--- a/QUETZUAL (administrador)/cuentaAdmin.html
+++ b/QUETZUAL (administrador)/cuentaAdmin.html
@@ -8,6 +8,7 @@
     <title>Administrador</title>
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/cuentaAdmin.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -22,11 +23,11 @@
     <div class="flex">
         <div class="card">
             <form action="#">
-                <input type="text" placeholder="Nombre de Usuario" class="input">
-                <input type="text" placeholder="Correo electronico" class="input">
+                <input type="text" name="nombreadmin" id="nombreadmin" placeholder="Nombre de Usuario" class="input">
+                <input type="text" name="correoadmin" id="correoadmin" placeholder="Correo electronico" class="input">
                 <br>
                 <label for="" class="article">Fecha de nacimiento</label><br>
-                <input type="date" name="" id="" class="input">
+                <input type="date" name="fechaAdmin" id="fechaAdmin" class="input">
                 <br>
                 <label for="" class="article">Sexo</label>
                 <br>
@@ -35,15 +36,15 @@
                 <option value="a">Femenino</option>
                 <option value="a">Prefiero no decirlo</option>
             </select>
-                <input type="submit" class="submit" value="Modificar Cuenta" data-open="modalR">
+                <button type="button" class="submit" onclick="modificarcuentaAdmin()">Modificar Cuenta</button>
             </form>
         </div>
         <div class="card">
             <form action="#">
-                <input type="password" name="" id="" placeholder="Contraseña Actual" class="input">
-                <input type="password" name="" id="" placeholder="Nueva Contraseña" class="input">
-                <input type="password" name="" id="" placeholder="Confirmar Nueva Contraseña" class="input">
-                <input type="submit" class="submit" value="Cambiar contraseña" data-open="modalR">
+                <input type="password" name="passwordact" id="passwordact" placeholder="Contraseña Actual" class="input">
+                <input type="password" name="newpassword" id="newpassword" placeholder="Nueva Contraseña" class="input">
+                <input type="password" name="newpasswordconfirm" id="newpasswordconfirm" placeholder="Confirmar Nueva Contraseña" class="input">
+                <button type="button" class="submit" onclick="modificarContra()">Cambiar contraseña</button>
             </form>
         </div>
     </div>
@@ -57,6 +58,7 @@
     </div>
     <script src="./JS/redirigir.js"></script>
     <script src="./JS/funcionModal.js"></script>
+    <script src="./JS/validar.js"></script>
 </body>
 
 </html>
