--- a/QUETZUAL(doctor)/responderPregunta.html
+++ b/QUETZUAL(doctor)/responderPregunta.html
@@ -8,6 +8,7 @@
     <title>Responder</title>
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/responderPregunta.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -41,7 +42,7 @@
             <h1>Pregunta</h1>
         </div>
         <div class="pregunta">
-            <textarea name="" id="" class="area" placeholder="Escribe aquí tu pregunta" disabled>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente beatae laboriosam id ducimus vitae aperiam odio accusamus? Molestiae, dignissimos voluptates?</textarea>
+            <textarea name="" id="pregunta" class="area" placeholder="Escribe aquí tu pregunta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente beatae laboriosam id ducimus vita?</textarea>
         </div>
         <select name="filtro" id="filtro">
             <option selected disabled hidden>Elige la clasificación</option>
@@ -55,16 +56,16 @@
             <h1>Respuesta</h1>
         </div>
         <div class="pregunta">
-            <textarea name="" id="" class="area" placeholder="Escribe aquí tu respuesta"></textarea>
+            <textarea name="" id="respuesta" class="area" placeholder="Escribe aquí tu respuesta"></textarea>
         </div>
         <div class="flex">
-            <button class="question" data-open="modalR">Responder</button>
+            <button id="responder" class="question" onclick="ResPregunta()">Responder</button>
             <button class="cs">Cancelar</button>
         </div>
     </div>
     <div class="modal" id="modalR">
         <div class="card">
-            <h1>!Felicidades¡</h1><br>
+            <h1>¡Felicidades!</h1><br>
             <h1>Has obtenido 2 puntos por responder esta pregunta</h1><br>
             <h1>Gracias por tu esfuerzo</h1><br>
             <img src="./img/undraw_happy_announcement_ac67.svg" class="img">
@@ -74,6 +75,7 @@
     </div>
     <script src="./JS/funcionModal.js"></script>
     <script src="./JS/redirigir.js"></script>
+    <script src="./JS/validar.js"></script>
 </body>
 
 </html>
