Agregar los nombres del equipo

--- a/distribución.html
+++ b/distribución.html
@@ -16,6 +16,12 @@
     <a href="./sesionUsuario.html"><button>Usuario</button></a>
     <a href="./QUETZUAL(doctor)/inicioDoctor.html"><button>Doctor</button></a>
     <a href="./QUETZUAL (administrador)/sesionAdmin.html"><button>Administrador</button></a>
+    <h1>Trabajo realizado por:</h1>
+    <h3>Elizalde Hernández Alan</h3>
+    <h3>García García Aram Jesua</h3>
+    <h3>Gutierrez Bueno Elizabeth Andrea</h3>
+    <h3>López Castillo Azurim Sua</h3>
+    <h3>Vasco Giraldo Juan Esteban</h3>
 </body>
 
 </html>
